Fix/ Notifications page: improve layout on small screens (#1308)
* Fix notifications page layout on small screens

* Don't load unread count for super user; show notifications link in dropdown

* Add padding to notifications count

--- a/styles/pages/notifications.scss
+++ b/styles/pages/notifications.scss
@@ -7,17 +7,26 @@ main.notifications {
   }
 
   .filters-col {
-    float: left;
-    width: 245px;
     margin-left: 15px;
-    margin-right: .5rem;
-  }
-  .messages-col {
-    float: left;
-    width: calc(100% - 245px - 30px - 1rem);
-    margin-left: .5rem;
     margin-right: 15px;
   }
+  .messages-col {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  @media #{constants.$desktop} {
+    .filters-col {
+      float: left;
+      width: 245px;
+      margin-right: .5rem;
+    }
+    .messages-col {
+      float: left;
+      width: calc(100% - 245px - 30px - 1rem);
+      margin-left: .5rem;
+    }
+  }
+
   table.messages-table {
     border-bottom: 0;
     td.viewed {
